--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="zh-tw" >
 <head>
   <meta charset="UTF-8">
   <title>CodePen - 💝heart rate valentine&#39;s day animation</title>
