--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <main>
       <section class="info-section">
           <div class="left-part">
-              <h1><span class="d-flex">we make</span> <span class="text"></span></h1>
-              <p>We create classes every next month with our new talented creators</p>
-              <a href="https://www.yudiz.com/" class="book-link">
-                  <span class="linktext">Book Your Seat Now</span>
+              <h1><span class="d-flex">catlover</span> <span class="text"></span></h1>
+              <p>This is my personal wecsite </p>
+              <a href="https://www.instagram.com/e__catt/" class="book-link">
+                  <span class="linktext">My Instagram</span>
                   <span class="arrow">
                       <span></span>
                   </span>
@@ -29,35 +29,35 @@
 
               <div class="main-grid d-flex">
                   <div class="box">
-                      <span>Photography</span>
-                  </div>
-                  <div class="box">
-                      <div class="bg-img">
-                          <img src="https://www.yudiz.com/codepen/photography-banner/photography.png" alt="Photography">
-                      </div>
-                  </div>
-                  <div class="box">
-                      <span>Under Water</span>
-                  </div>
-                  <div class="box">
-                      <span>VFX</span>
-                  </div>
-                  <div class="box">
-                      <div class="bg-img">
-                          <img src="https://www.yudiz.com/codepen/photography-banner/VFX.png" alt="VFX">
-                      </div>
-                  </div>
-                  <div class="box">
-                      <div class="bg-img">
-                          <img src="https://www.yudiz.com/codepen/photography-banner/under-water.png" alt="VFX">
-                      </div>
-                  </div>
-                  <div class="box">
                       <span>Videography</span>
                   </div>
                   <div class="box">
                       <div class="bg-img">
-                          <img src="https://www.yudiz.com/codepen/photography-banner/Videography.png" alt="Videography">
+                          <img src="https://iili.io/J1yjv14.jpg" alt="Photography">
+                      </div>
+                  </div>
+                  <div class="box">
+                      <span>TCIVS</span>
+                  </div>
+                  <div class="box">
+                      <span>Hacker</span>
+                  </div>
+                  <div class="box">
+                      <div class="bg-img">
+                          <img src="https://iili.io/JEFAws2.jpg" alt="hacker">
+                      </div>
+                  </div>
+                  <div class="box">
+                      <div class="bg-img">
+                          <img src="https://iili.io/J1yLnfV.jpg" alt="VFX">
+                      </div>
+                  </div>
+                  <div class="box">
+                      <span>Photography</span>
+                  </div>
+                  <div class="box">
+                      <div class="bg-img">
+                          <img src="https://iili.io/J1yXR4V.png" alt="sea">
                       </div>
                   </div>
               </div>
