--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-tw">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="script.js"></script> 
-    <title>Document</title>
+    <title>Catlover</title>
 </head>
 <body>
 
@@ -14,12 +14,19 @@
           <div class="left-part">
               <h1><span class="d-flex">catlover</span> <span class="text"></span></h1>
               <p>This is my personal wecsite </p>
-              <a href="https://www.instagram.com/e__catt/" class="book-link">
-                  <span class="linktext">My Instagram</span>
-                  <span class="arrow">
-                      <span></span>
+              <a href="https://www.instagram.com/e__catt/" class="book-link">  
+                  <span class="linktext">My Instagram</span>  
+                  <span class="arrow">  
+                      <span></span>  
                   </span>
-              </a>
+              </a>  
+              <br>
+              <a href="./pic.html" class="book-link">
+                <span class="linktext">Gallary</span>
+                <span class="arrow">
+                    <span></span>
+                </span>
+            </a>
           </div>
           <div class="right-part" >
               <div class="bg-line">
