--- a/pic.html
+++ b/pic.html
@@ -386,12 +386,13 @@
 </div>
 
 
-
+<center>
 <a href="./index.html" class="book-link" > 
     <span class="linktext">Home</span>  
     <span class="arrow">  
         <span></span>  
     </span> 
 </a>  
+</center>
 </body>
 </html>
