--- a/index.html
+++ b/index.html
@@ -26,7 +26,15 @@
                 <span class="arrow">
                     <span></span>
                 </span>
-            </a>
+              </a>
+              <br>
+              <a href="./tex.html" class="book-link">
+                <span class="linktext">SuperText</span>
+                <span class="arrow">
+                    <span></span>
+                </span>
+              </a>
+            
           </div>
           <div class="right-part" >
               <div class="bg-line">
