--- a/tex.html
+++ b/tex.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SuperText</title>
     <link rel="stylesheet" type="text/css" href="tex.css">
-    <script src="tex.js"></script>
 
 </head>
 
@@ -26,30 +25,14 @@
         <h2>Smooth liquid background effect</h2>
         <p>It works by adding blurred blobs that bounce off the screen edge</p>
         <div class="tutorial-link">
-          <a href="https://www.youtube.com/watch?v=ZFI8LE6EoTQ"
+          <a href="./index.html"
              target="_blank" rel="noopener noreferer">
-            <svg
-            version="1.1"
-            id="Layer_1"
-            xmlns="http://www.w3.org/2000/svg"
-            xmlns:xlink="http://www.w3.org/1999/xlink"
-            x="0px"
-            y="0px"
-            viewBox="0 0 461.001 461.001"
-            style="enable-background: new 0 0 461.001 461.001"
-            xml:space="preserve"
-          >
-            <path
-              style="fill: #f61c0d"
-              d="M365.257,67.393H95.744C42.866,67.393,0,110.259,0,163.137v134.728
-          c0,52.878,42.866,95.744,95.744,95.744h269.513c52.878,0,95.744-42.866,95.744-95.744V163.137
-          C461.001,110.259,418.135,67.393,365.257,67.393z M300.506,237.056l-126.06,60.123c-3.359,1.602-7.239-0.847-7.239-4.568V168.607
-          c0-3.774,3.982-6.22,7.348-4.514l126.06,63.881C304.363,229.873,304.298,235.248,300.506,237.056z"
-            />
-          </svg>
-            Video Tutorial      
+            Home      
           </a>
         </div>
       </div>
+
+<script src="tex.js"></script>
+
 </body>
 </html>
