--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="style.css">
     <script src="script.js"></script> 
     <title>Catlover</title>
 </head>
@@ -29,7 +29,7 @@
               </a>
               <br>
               <a href="./tex.html" class="book-link">
-                <span class="linktext">SuperText</span>
+                <span class="linktext">SuperButton</span>
                 <span class="arrow">
                     <span></span>
                 </span>
