--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </span>
               </a>
               <br>
-              <a href="./tex.html" class="book-link">
+              <a href="./tex/tex.html" class="book-link">
                 <span class="linktext">SuperButton</span>
                 <span class="arrow">
                     <span></span>
