--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script> 
+    <script src="tex.js"></script>
+    <script src="tex.js" defer></script>
+    <script src="tex.js" async></script>
     <title>Catlover</title>
 </head>
 <body>
