--- a/pic.html
+++ b/pic.html
@@ -10,22 +10,19 @@
   <script src="pic.js"></script>
 </head>
 <body>
-  <div class="container">
-    <div class="main-img">
-        <img src="https://raw.githubusercontent.com/abo-elnoUr/public-assets/master/img1.jpg" id="current" />
-    </div>
+  <p>Image Gallary</p>
 
-    <div class="imgs">
-        <img src="https://raw.githubusercontent.com/abo-elnoUr/public-assets/master/img1.jpg" />
-        <img src="https://raw.githubusercontent.com/abo-elnoUr/public-assets/master/img2.jpg" />
-        <img src="https://raw.githubusercontent.com/abo-elnoUr/public-assets/master/img3.jpg" />
-        <img src="https://raw.githubusercontent.com/abo-elnoUr/public-assets/master/img4.jpg" />
-        <img src="https://raw.githubusercontent.com/abo-elnoUr/public-assets/master/img5.jpg" />
-        <img src="https://raw.githubusercontent.com/abo-elnoUr/public-assets/master/img6.jpg" />
-        <img src="https://raw.githubusercontent.com/abo-elnoUr/public-assets/master/img7.jpg" />
-        <img src="https://raw.githubusercontent.com/abo-elnoUr/public-assets/master/img8.jpg" />
-    </div>
-</div>
-
+  <img src="http://c1.staticflickr.com/9/8450/8026519634_f33f3724ea_b.jpg">
+  <img src="http://c1.staticflickr.com/8/7218/7209301894_c99d3a33c2_h.jpg">
+  <img src="http://c1.staticflickr.com/8/7231/6947093326_df216540ff_b.jpg">
+  
+  <img src="http://c1.staticflickr.com/9/8788/17367410309_78abb9e5b6_b.jpg">
+  <img src="http://c1.staticflickr.com/6/5814/20700286354_762c19bd3b_b.jpg">
+  <img src="http://c1.staticflickr.com/6/5647/21137202535_404bf25729_b.jpg">
+  
+  <img src="http://c1.staticflickr.com/6/5588/14991687545_5c8e1a2e86_b.jpg">
+  <img src="http://c1.staticflickr.com/4/3888/14878097108_5997041006_b.jpg">
+  <img src="http://c1.staticflickr.com/8/7579/15482110477_0b0e9e5421_b.jpg">
+  
 </body>
 </html>
