--- a/pic.html
+++ b/pic.html
@@ -5,24 +5,61 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gallary</title>
   <link rel="stylesheet" href="pic.css">
-  <script src="pic.js" defer></script>
-  <script src="pic.js" async></script>
-  <script src="pic.js"></script>
 </head>
 <body>
-  <p>Image Gallary</p>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,400,300,600,700,800" rel="stylesheet" type="text/css">
 
-  <img src="http://c1.staticflickr.com/9/8450/8026519634_f33f3724ea_b.jpg">
-  <img src="http://c1.staticflickr.com/8/7218/7209301894_c99d3a33c2_h.jpg">
-  <img src="http://c1.staticflickr.com/8/7231/6947093326_df216540ff_b.jpg">
-  
-  <img src="http://c1.staticflickr.com/9/8788/17367410309_78abb9e5b6_b.jpg">
-  <img src="http://c1.staticflickr.com/6/5814/20700286354_762c19bd3b_b.jpg">
-  <img src="http://c1.staticflickr.com/6/5647/21137202535_404bf25729_b.jpg">
-  
-  <img src="http://c1.staticflickr.com/6/5588/14991687545_5c8e1a2e86_b.jpg">
-  <img src="http://c1.staticflickr.com/4/3888/14878097108_5997041006_b.jpg">
-  <img src="http://c1.staticflickr.com/8/7579/15482110477_0b0e9e5421_b.jpg">
-  
+  <div id="js-car1" class="car car--1 c-green-g"></div>
+      <div id="js-car2" class="car car--2 c-green-g"></div>
+      <div id="js-fast" class="c-green-c-g text text--fast">
+        <div class="text__bit text__bit--1">
+          <div id="js-bit-inner" class="text__bit__inner"><span id="js-span">f</span></div>
+        </div>
+        <div class="text__bit text__bit--2">
+          <div id="js-bit-inner" class="text__bit__inner"><span id="js-span">a</span></div>
+        </div>
+        <div class="text__bit text__bit--3">
+          <div id="js-bit-inner" class="text__bit__inner"><span id="js-span">s</span></div>
+        </div>
+        <div class="text__bit text__bit--4">
+          <div id="js-bit-inner" class="text__bit__inner"><span id="js-span">t</span></div>
+        </div>
+      </div>
+      <div id="js-arrow1" class="arrow"></div>
+      <div id="js-arrow2" class="arrow"></div>
+      <div id="js-arrow3" class="arrow"></div>
+      <div id="js-arrow-wrap" class="arrow arrow--wrap">
+        <div id="js-arrow4" class="arrow arrow--center"></div>
+      </div>
+      <div id="js-robust-screen2" class="screen screen--robust">
+        <div id="js-robust-screen" class="screen screen--robust">
+          <div id="js-robust" class="text text--robust c-green-c-g">robust
+            <div id="js-robust-shade1" class="text--robust__shade text--robust__shade--1"></div>
+            <div id="js-robust-shade2" class="text--robust__shade text--robust__shade--2"></div>
+          </div>
+        </div>
+      </div>
+      <div id="js-thunder-bg" class="thunder-bg"></div>
+      <div id="js-easy-screen" class="screen screen--easy">
+        <div id="js-easy" class="text easy">
+          <div id="js-easy-wrapper" class="easy__wrapper">
+            <div id="js-easy-text" class="easy__text">easy</div>
+          </div>
+        </div>
+      </div>
+      <div id="js-screen1" class="screen">
+        <div id="js-line" class="line"></div>
+      </div>
+      <div id="js-screen2" class="screen"></div>
+      <div id="js-velocity" class="velocity"><span>v</span><span>e</span><span>l</span><span>o</span><span>c</span><span>i</span><span>t</span><span>y</span><span>.</span><span>j</span><span>s</span></div>
+      <div id="js-logos-screen" class="screen screen--logos"><a href="https://github.com/julianshapiro/velocity" target="_blank" id="js-github" class="github">
+          <div class="github__text">VelocityJS on GitHub</div></a>
+        <div id="js-restart" class="restart"></div><a href="https://twitter.com/legomushroom" target="_blank" id="js-lego" class="lego">
+          <div class="lego__text lego__text--header">Demo by:</div>
+          <div class="lego__text lego__text">@legomushroom</div></a>
+      </div>
+<script src="pic.js" defer></script>
+<script src="pic.js" async></script>
+<script src="pic.js"></script>
 </body>
 </html>
