--- a/pic.html
+++ b/pic.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gallary</title>
   <link rel="stylesheet" href="pic.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="pic.js"></script>
+  <script src="pic.js" defer></script>
+  <script src="pic.js" async></script>
+
 </head>
 <body>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,400,300,600,700,800" rel="stylesheet" type="text/css">
@@ -58,8 +63,6 @@
           <div class="lego__text lego__text--header">Demo by:</div>
           <div class="lego__text lego__text">@legomushroom</div></a>
       </div>
-<script src="pic.js" defer></script>
-<script src="pic.js" async></script>
-<script src="pic.js"></script>
+
 </body>
 </html>
