--- a/pic.html
+++ b/pic.html
@@ -5,9 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gallary</title>
   <link rel="stylesheet" href="pic.css">
-  <script src="pic.js"></script>
-  <script src="pic.js" defer></script>
-  <script src="pic.js" async></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
+
 
 </head>
 <body>
