--- a/main.html
+++ b/main.html
@@ -21,6 +21,13 @@
                   <span class="arrow">  
                       <span></span>  
                   </span>
+              </a>
+              <br>
+              <a href="./index.html" class="book-link">
+                <span class="linktext">Intro</span>
+                <span class="arrow">
+                    <span></span>
+                </span>
               </a>  
               <br>
               <a href="./tex/tex.html" class="book-link">
@@ -29,8 +36,9 @@
                     <span></span>
                 </span>
               </a>
+              
             
-          </div>
+            </div>
           <div class="right-part" >
               <div class="bg-line">
                   <img src="https://www.yudiz.com/codepen/photography-banner/wave.svg" alt="Line">
