--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gallary</title>
-  <link rel="stylesheet" href="pic.css">
+  <title>Intro</title>
+  <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
