--- a/index.html
+++ b/index.html
@@ -338,9 +338,9 @@
 
   <div class="scrollElement"></div>
   
-  <a href="./main.html" target="_blank" class="btn btn_works">Home</a>
+  <a href="/main/main.html" target="_blank" class="btn btn_works">Home</a>
   <button class="btn" id="fullscr">Go Fullscreen</button>
-  <script src="pic.js"></script>
+  <script src="script.js"></script>
 
   </body>
 </html>
