--- a/main/main.html
+++ b/main/main.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="picc.css">
-    <script src="script.js"></script>
-    <script src="script.js" defer></script>
-    <script src="script.js" async></script>
+    <script src="picc.js"></script>
+    <script src="picc.js" defer></script>
+    <script src="picc.js" async></script>
     <title>Catlover</title>
 </head>
 <body>
@@ -23,7 +23,7 @@
                   </span>
               </a>
               <br>
-              <a href="./index.html" class="book-link">
+              <a href="/index.html" class="book-link">
                 <span class="linktext">Intro</span>
                 <span class="arrow">
                     <span></span>
