--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 </head>
 <body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/Flip.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollToPlugin.min.js"></script>
   <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 750 500" preserveAspectRatio="xMidYMax slice">
     <defs>
         <!-- Scene 1 Gradient -->
@@ -341,6 +339,8 @@
   <a href="/main/main.html" target="_blank" class="btn btn_works">Home</a>
   <button class="btn" id="fullscr">Go Fullscreen</button>
   <script src="script.js"></script>
+  <script src="picc.js" defer></script>
+  <script src="picc.js" async></script>
 
   </body>
 </html>
