--- a/main/main.html
+++ b/main/main.html
@@ -30,7 +30,7 @@
                 </span>
               </a>  
               <br>
-              <a href="./tex/tex.html" class="book-link">
+              <a href="/tex/tex.html" class="book-link">
                 <span class="linktext">SuperButton</span>
                 <span class="arrow">
                     <span></span>
