--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 
   <div class="scrollElement"></div>
   
-  <a href="/main/main.html" target="_blank" class="btn btn_works">Home</a>
+  <a href="./main/main.html" target="_blank" class="btn btn_works">Home</a>
   <button class="btn" id="fullscr">Go Fullscreen</button>
   <script src="script.js"></script>
   <script src="picc.js" defer></script>
