--- a/main/main.html
+++ b/main/main.html
@@ -23,14 +23,14 @@
                   </span>
               </a>
               <br>
-              <a href="./index.html" class="book-link">
+              <a href="/index.html" class="book-link">
                 <span class="linktext">Intro</span>
                 <span class="arrow">
                     <span></span>
                 </span>
               </a>  
               <br>
-              <a href="./tex/tex.html" class="book-link">
+              <a href="/tex/tex.html" class="book-link">
                 <span class="linktext">SuperButton</span>
                 <span class="arrow">
                     <span></span>
