--- a/index.html
+++ b/index.html
@@ -338,6 +338,9 @@
   
   <a href="./main/main.html" class="btn btn_works">Home</a>
   <button class="btn" id="fullscr">Go Fullscreen</button>
+  <script src="script.js"></script>
+  <script src="script.js" defer></script>
+  <script src="script.js" async></script>
 
   </body>
 </html>
