--- a/main/main.html
+++ b/main/main.html
@@ -8,6 +8,8 @@
     <script src="picc.js" defer></script>
     <script src="picc.js" async></script>
     <title>Catlover</title>
+    <link rel="icon" type="image/x-icon" href="../clogo.png">
+
 </head>
 <body>
 
