--- a/tex/tex.html
+++ b/tex/tex.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="tex.css">
-
+    <link rel="icon" type="image/x-icon" href="../clogo.png">
     <title>SuperText</title>
 </head>
 
