--- a/main/main.html
+++ b/main/main.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="picc.css">
-    <script src="picc.js"></script>
-    <script src="picc.js" defer></script>
-    <script src="picc.js" async></script>
     <title>Catlover</title>
     <link rel="icon" type="image/x-icon" href="../clogo.png">
 
 </head>
 <body>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12/lib/typed.min.js"></script>
 
   <main>
       <section class="info-section">
@@ -101,5 +99,9 @@
           </div>
       </section>
   </main>
+
+  <script src="picc.js"></script>
+  <script src="picc.js" defer></script>
+  <script src="picc.js" async></script>
 </body>
 </html>
