--- a/main/main.html
+++ b/main/main.html
@@ -44,7 +44,7 @@
               </a>
               <br>
               <a href="../cool/cool.html" class="book-link">
-                <span class="linktext">CoolThing</span>
+                <span class="linktext">Gallary</span>
                 <span class="arrow">
                     <span></span>
                 </span>
