--- a/cool/cool.html
+++ b/cool/cool.html
@@ -12,6 +12,13 @@
 </head>
 
 <body>
+  <br>
+  <form action="../main/main.html">
+    <input type="submit" value="Home" />
+  </form>
+  <br>
+
+
   <div ID="ngy2p" data-nanogallery2='{
     "itemsBaseURL": "http://nanogallery2.nanostudio.org/samples/",
     "thumbnailWidth": "auto XS80 SM120",
