--- a/cool/cool.html
+++ b/cool/cool.html
@@ -13,9 +13,11 @@
 
 <body>
   <br>
+  <center>
   <form action="../main/main.html">
-    <input type="submit" value="Home" />
+    <input type="submit" value="Home" style="background-color: #04AA6D; color: white; padding: 15px 32px; border: none; font-size: 16px; cursor: pointer;"/>
   </form>
+  </center>
   <br>
 
   <div ID="ngy2p" data-nanogallery2='{
