--- a/cool/cool.html
+++ b/cool/cool.html
@@ -9,13 +9,91 @@
     <link href="https://cdn.jsdelivr.net/npm/nanogallery2@3/dist/css/nanogallery2.min.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/nanogallery2@3/dist/jquery.nanogallery2.min.js"></script>
     <title>Gallary</title>
+    <style>
+      /* Include */
+      @font-face {
+        font-family: "monument_extendedregular";
+        src: url("https://www.yudiz.com/codepen/photography-banner/monumentextended-regular.woff2")
+          format("woff2");
+        font-weight: normal;
+        font-style: normal;
+      }
+
+      @font-face {
+        font-family: "Extenda Trial 20 Micro";
+        src: url("https://www.yudiz.com/codepen/photography-banner/Extenda-20Micro.woff2")
+          format("woff2");
+        font-weight: 300;
+        font-style: normal;
+        font-display: swap;
+      }
+
+      @font-face {
+        font-family: "Extenda Trial 30 Deca";
+        src: url("https://www.yudiz.com/codepen/photography-banner/Extenda-30Deca.woff2")
+          format("woff2");
+        font-weight: normal;
+        font-style: normal;
+        font-display: swap;
+      }
+
+      /* Common CSS */
+      body,
+      html {
+        overflow-x: hidden !important;
+      }
+
+      body {
+        margin: 0;
+        background-color: #212121;
+        background-image: url("https://www.yudiz.com/codepen/photography-banner/frame.png");
+      }
+
+      ::selection {
+        background-color: rgba(241, 231, 40, 0.2);
+        color: #ffffff;
+      }
+      button {
+        --c:  #229091; /* the color*/
+
+        box-shadow: 0 0 0 .1em inset var(--c); 
+        --_g: linear-gradient(var(--c) 0 0) no-repeat;
+        background: 
+          var(--_g) calc(var(--_p,0%) - 100%) 0%,
+          var(--_g) calc(200% - var(--_p,0%)) 0%,
+          var(--_g) calc(var(--_p,0%) - 100%) 100%,
+          var(--_g) calc(200% - var(--_p,0%)) 100%;
+        background-size: 50.5% calc(var(--_p,0%)/2 + .5%);
+        outline-offset: .1em;
+        transition: background-size .4s, background-position 0s .4s;
+      }
+      button:hover {
+        --_p: 100%;
+        transition: background-position .4s, background-size 0s;
+      }
+      button:active {
+        box-shadow: 0 0 9e9q inset #0009; 
+        background-color: var(--c);
+        color: #fff;
+      }
+
+      button {
+        color: #fff;
+        font-family: system-ui, sans-serif;
+        font-size: 3.5rem;
+        cursor: pointer;
+        padding: .1em .6em;
+        font-weight: bold;  
+        border: none;
+      }
+    </style>
 </head>
 
 <body>
   <br>
   <center>
   <form action="../main/main.html">
-    <input type="submit" value="Home" style="background-color: #04AA6D; color: white; padding: 15px 32px; border: none; font-size: 16px; cursor: pointer;"/>
+    <button>Home</button>
   </form>
   </center>
   <br>
